--- a/docs/getting-started/scalardb.properties
+++ b/docs/getting-started/scalardb.properties
@@ -10,7 +10,7 @@ scalar.db.multi_storage.storages=postgresql,mysql
 scalar.db.multi_storage.storages.mysql.storage=jdbc
 scalar.db.multi_storage.storages.mysql.contact_points=jdbc:mysql://localhost:3306/
 scalar.db.multi_storage.storages.mysql.username=root
-scalar.db.multi_storage.storages.mysql.password=matutani
+scalar.db.multi_storage.storages.mysql.password=password
 # JDBC specific configurations for the "mysql" storage. As mentioned before, the format is "scalar.db.multi_storage.storages.<storage name>.<property name without the prefix 'scalar.db.'>". So for example, if you want to specify the "scalar.db.jdbc.connection_pool.min_idle" property for the "mysql" storage, you can specify "scalar.db.multi_storage.storages.mysql.jdbc.connection_pool.min_idle".
 scalar.db.multi_storage.storages.mysql.jdbc.connection_pool.min_idle=5
 scalar.db.multi_storage.storages.mysql.jdbc.connection_pool.max_idle=10
@@ -21,7 +21,7 @@ scalar.db.multi_storage.storages.mysql.jdbc.connection_pool.max_total=25
 scalar.db.multi_storage.storages.postgresql.storage=jdbc
 scalar.db.multi_storage.storages.postgresql.contact_points=jdbc:postgresql://localhost:5432/
 scalar.db.multi_storage.storages.postgresql.username=postgres
-scalar.db.multi_storage.storages.postgresql.password=matutani
+scalar.db.multi_storage.storages.postgresql.password=password
 
 scalar.db.multi_storage.storages.postgresql.jdbc.connection_pool.min_idle=5
 scalar.db.multi_storage.storages.postgresql.jdbc.connection_pool.max_idle=10
